--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ isort = "^5.10.1"
 flake8 = "^4.0.1"
 jedi = "^0.18.1"
 jupyter-lsp = "^1.5.1"
+tox = "^3.25.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
